// Original file: exa/opensearch_clients_pb/opensearch_clients.proto


export interface ConnectorAdditionalParamsSlack {
  'clientId'?: (string);
  'clientSecret'?: (string);
  'signingSecret'?: (string);
}

export interface ConnectorAdditionalParamsSlack__Output {
  'clientId': (string);
  'clientSecret': (string);
  'signingSecret': (string);
}
