// Original file: exa/opensearch_clients_pb/opensearch_clients.proto


export interface ConnectorConfigGoogleDrive {
  'includeDriveIds'?: (string)[];
  'excludeDriveIds'?: (string)[];
}

export interface ConnectorConfigGoogleDrive__Output {
  'includeDriveIds': (string)[];
  'excludeDriveIds': (string)[];
}
