// Original file: exa/opensearch_clients_pb/opensearch_clients.proto


export interface ConnectorConfigSlack {
  'includeChannelIds'?: (string)[];
  'excludeChannelIds'?: (string)[];
}

export interface ConnectorConfigSlack__Output {
  'includeChannelIds': (string)[];
  'excludeChannelIds': (string)[];
}
