// Original file: exa/opensearch_clients_pb/opensearch_clients.proto


export interface ConnectorInternalConfigSlack {
  'signingSecret'?: (string);
  'clientId'?: (string);
  'clientSecret'?: (string);
}

export interface ConnectorInternalConfigSlack__Output {
  'signingSecret': (string);
  'clientId': (string);
  'clientSecret': (string);
}
