// Original file: exa/opensearch_clients_pb/opensearch_clients.proto

export const ConnectorType = {
  CONNECTOR_TYPE_UNSPECIFIED: 'CONNECTOR_TYPE_UNSPECIFIED',
  CONNECTOR_TYPE_GITHUB: 'CONNECTOR_TYPE_GITHUB',
  CONNECTOR_TYPE_SLACK: 'CONNECTOR_TYPE_SLACK',
  CONNECTOR_TYPE_GOOGLE_DRIVE: 'CONNECTOR_TYPE_GOOGLE_DRIVE',
  CONNECTOR_TYPE_JIRA: 'CONNECTOR_TYPE_JIRA',
  CONNECTOR_TYPE_CODEIUM: 'CONNECTOR_TYPE_CODEIUM',
  CONNECTOR_TYPE_EMAIL: 'CONNECTOR_TYPE_EMAIL',
  CONNECTOR_TYPE_GITHUB_OAUTH: 'CONNECTOR_TYPE_GITHUB_OAUTH',
} as const;

export type ConnectorType =
  | 'CONNECTOR_TYPE_UNSPECIFIED'
  | 0
  | 'CONNECTOR_TYPE_GITHUB'
  | 1
  | 'CONNECTOR_TYPE_SLACK'
  | 2
  | 'CONNECTOR_TYPE_GOOGLE_DRIVE'
  | 3
  | 'CONNECTOR_TYPE_JIRA'
  | 4
  | 'CONNECTOR_TYPE_CODEIUM'
  | 5
  | 'CONNECTOR_TYPE_EMAIL'
  | 6
  | 'CONNECTOR_TYPE_GITHUB_OAUTH'
  | 7

export type ConnectorType__Output = typeof ConnectorType[keyof typeof ConnectorType]
