// Original file: exa/opensearch_clients_pb/opensearch_clients.proto

import type { ConnectorInternalConfig as _exa_opensearch_clients_pb_ConnectorInternalConfig, ConnectorInternalConfig__Output as _exa_opensearch_clients_pb_ConnectorInternalConfig__Output } from '../../exa/opensearch_clients_pb/ConnectorInternalConfig';

export interface GetConnectorInternalConfigResponse {
  'internalConfig'?: (_exa_opensearch_clients_pb_ConnectorInternalConfig | null);
}

export interface GetConnectorInternalConfigResponse__Output {
  'internalConfig': (_exa_opensearch_clients_pb_ConnectorInternalConfig__Output | null);
}
