// Original file: exa/opensearch_clients_pb/opensearch_clients.proto

import type { ConnectorState as _exa_opensearch_clients_pb_ConnectorState, ConnectorState__Output as _exa_opensearch_clients_pb_ConnectorState__Output } from '../../exa/opensearch_clients_pb/ConnectorState';

export interface GetKnowledgeBaseConnectorStateResponse {
  'connectorStates'?: (_exa_opensearch_clients_pb_ConnectorState)[];
}

export interface GetKnowledgeBaseConnectorStateResponse__Output {
  'connectorStates': (_exa_opensearch_clients_pb_ConnectorState__Output)[];
}
