// Original file: exa/opensearch_clients_pb/opensearch_clients.proto

import type { JobState as _exa_opensearch_clients_pb_JobState, JobState__Output as _exa_opensearch_clients_pb_JobState__Output } from '../../exa/opensearch_clients_pb/JobState';

export interface GetKnowledgeBaseJobStatesResponse {
  'jobStates'?: (_exa_opensearch_clients_pb_JobState)[];
}

export interface GetKnowledgeBaseJobStatesResponse__Output {
  'jobStates': (_exa_opensearch_clients_pb_JobState__Output)[];
}
