// Original file: exa/opensearch_clients_pb/opensearch_clients.proto

import type { CommonDocumentWithScore as _exa_opensearch_clients_pb_CommonDocumentWithScore, CommonDocumentWithScore__Output as _exa_opensearch_clients_pb_CommonDocumentWithScore__Output } from '../../exa/opensearch_clients_pb/CommonDocumentWithScore';

export interface HybridSearchResponse {
  'documentWithScores'?: (_exa_opensearch_clients_pb_CommonDocumentWithScore)[];
}

export interface HybridSearchResponse__Output {
  'documentWithScores': (_exa_opensearch_clients_pb_CommonDocumentWithScore__Output)[];
}
