// Original file: exa/opensearch_clients_pb/opensearch_clients.proto


export interface SlackChannelPayload {
  'type'?: (string);
  'channelId'?: (string);
  'channelName'?: (string);
  'description'?: (string);
  'teamId'?: (string);
  'isPrivateChannel'?: (boolean);
}

export interface SlackChannelPayload__Output {
  'type': (string);
  'channelId': (string);
  'channelName': (string);
  'description': (string);
  'teamId': (string);
  'isPrivateChannel': (boolean);
}
