// Original file: exa/opensearch_clients_pb/opensearch_clients.proto


export interface SlackMessagePayload {
  'datasetId'?: (string);
  'previousMessageDatasetId'?: (string);
  'type'?: (string);
  'channelId'?: (string);
  'user'?: (string);
  'text'?: (string);
  'timestamp'?: (string);
  'threadTimestamp'?: (string);
  'channelName'?: (string);
  'teamName'?: (string);
  'teamId'?: (string);
  'isPrivateChannel'?: (boolean);
  'teamDomain'?: (string);
  'originalTimestamp'?: (string);
}

export interface SlackMessagePayload__Output {
  'datasetId': (string);
  'previousMessageDatasetId': (string);
  'type': (string);
  'channelId': (string);
  'user': (string);
  'text': (string);
  'timestamp': (string);
  'threadTimestamp': (string);
  'channelName': (string);
  'teamName': (string);
  'teamId': (string);
  'isPrivateChannel': (boolean);
  'teamDomain': (string);
  'originalTimestamp': (string);
}
