// Original file: exa/opensearch_clients_pb/opensearch_clients.proto


export interface UserInfo {
  'authUid'?: (string);
  'email'?: (string);
  'name'?: (string);
  'photoUrl'?: (string);
}

export interface UserInfo__Output {
  'authUid': (string);
  'email': (string);
  'name': (string);
  'photoUrl': (string);
}
